# weave-lang

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  NewLayout.md  README.md
compiler/: CMakeLists.txt
compiler/weave_bitwise/: CMakeLists.txt
compiler/weave_bitwise/cxx/: Bitwise.cxx  CMakeLists.txt  CompressedInteger.cxx  bitwise.cxx
compiler/weave_bitwise/include/weave/: Bitwise.hxx
compiler/weave_bitwise/tests/: CMakeLists.txt  CompressedInteger.cxx
compiler/weave_bugcheck/: CMakeLists.txt
compiler/weave_bugcheck/cxx/: Assert.cxx  BugCheck.cxx  CMakeLists.txt
compiler/weave_bugcheck/include/weave/: BugCheck.hxx
compiler/weave_commandline/: CMakeLists.txt
compiler/weave_commandline/cxx/: CMakeLists.txt  CommandLine.cxx  CommandLineParser.cxx
compiler/weave_commandline/include/weave/: CommandLine.hxx
compiler/weave_core/: CMakeLists.txt
compiler/weave_core/cxx/: CMakeLists.txt  String.cxx
compiler/weave_docgen/: CMakeLists.txt
compiler/weave_docgen/cxx/: CMakeLists.txt  Main.cxx
compiler/weave_docgen/res/: style.css
compiler/weave_docgen/res/dark/: style.css
compiler/weave_driver/: CMakeLists.txt
compiler/weave_driver/cxx/: CMakeLists.txt  DocumentationGenerator.cxx  Main.cxx  main.cxx
compiler/weave_driver/docs/: CommandLine.md
compiler/weave_errors/: CMakeLists.txt
compiler/weave_errors/cxx/: CMakeLists.txt  Handler.cxx  handler.cxx
compiler/weave_filesystem/: CMakeLists.txt
compiler/weave_filesystem/cxx/: CMakeLists.txt  DirectoryEnumerator.cxx  FileReader.cxx  FileSystem.cxx  FileWriter.cxx  Path.cxx  Pipe.cxx  Utilities.cxx
compiler/weave_filesystem/cxx/posix/: CMakeLists.txt  Common.hxx  DirectoryEnumerator.cxx  Error.cxx  Error.hxx  FileHandle.cxx  FileInfo.cxx  Pipe.cxx
compiler/weave_filesystem/cxx/windows/: CMakeLists.txt  Common.hxx  DirectoryEnumerator.cxx  Error.cxx  Error.hxx  FileHandle.cxx  FileInfo.cxx  FileSystem.cxx  Pipe.cxx
compiler/weave_filesystem/tests/: CMakeLists.txt  Path.cxx
compiler/weave_hash/: CMakeLists.txt
compiler/weave_hash/cxx/: AES.cxx  CMakeLists.txt  Sha256.cxx  sha256.cxx
compiler/weave_hash/tests/: Aes.cxx  CMakeLists.txt  Sha256.cxx
compiler/weave_json/: CMakeLists.txt
compiler/weave_json/cxx/: CMakeLists.txt  JsonReader.cxx
compiler/weave_json/tests/: CMakeLists.txt  SmokeTests.cxx
compiler/weave_lexer/: CMakeLists.txt
compiler/weave_lexer/cxx/: CMakeLists.txt  CharTraits.cxx  Lexer.cxx  LexerContext.cxx  Token.cxx  TokenKind.cxx  TriviaKind.cxx
compiler/weave_memory/: CMakeLists.txt
compiler/weave_memory/cxx/: CMakeLists.txt  LinearAllocator.cxx  PageAllocator.cxx
compiler/weave_memory/cxx/posix/: PageAllocator.cxx
compiler/weave_memory/cxx/windows/: CMakeLists.txt  PageAllocator.cxx
compiler/weave_numerics/: CMakeLists.txt
compiler/weave_numerics/cxx/: CMakeLists.txt  Int128.cxx  UInt128.cxx
compiler/weave_numerics/old/: uint256.cxx
compiler/weave_numerics/tests/: CMakeLists.txt  Int128.cxx  UInt128.cxx
compiler/weave_platform/: CMakeLists.txt
compiler/weave_platform/cxx/: CMakeLists.txt  StringBuffer.cxx  SystemErrorFromErrno.cxx
compiler/weave_platform/cxx/windows/: CMakeLists.txt  String.cxx  SystemErrorFromWin32Error.cxx
compiler/weave_profiler/: CMakeLists.txt
compiler/weave_profiler/cxx/: CMakeLists.txt  Profiler.cxx
compiler/weave_session/: CMakeLists.txt
compiler/weave_session/cxx/: CMakeLists.txt  CodeGeneratorOptions.cxx  EmitOptions.cxx  ExperimentalOptions.cxx  Options.cxx  SanitizersSpec.cxx  Session.cxx  session.cxx
compiler/weave_session/include/weave/: Session.hxx  session.hxx
compiler/weave_source/: CMakeLists.txt
compiler/weave_source/cxx/: CMakeLists.txt  Charset.cxx  Diagnostic.cxx  SourceCursor.cxx  SourceText.cxx
compiler/weave_source/tests/: CMakeLists.txt  SourceCursor.cxx  SourceText.cxx
compiler/weave_stringpool/: CMakeLists.txt
compiler/weave_stringpool/cxx/: CMakeLists.txt  StringPool.cxx
compiler/weave_syntax/: CMakeLists.txt
compiler/weave_syntax/cxx/: CMakeLists.txt  CharTraits.cxx  Declaration.cxx  Expression.cxx  Lexer.cxx  LexerContext.cxx  Parser.cxx  Statement.cxx  SyntaxFactory.cxx  SyntaxFacts.cxx  SyntaxKind.cxx  SyntaxKind2.cxx  SyntaxNode.cxx  SyntaxToken.cxx  Token.cxx  TokenKind.cxx  TriviaKind.cxx  Visitor.cxx
compiler/weave_syntax/docs/: Grammar.md  Parsing.md  TODO.md
compiler/weave_syntax/scripts/: generate_syntax_nodes.py  generate_tokens.py
compiler/weave_syntax/tests/: CMakeLists.txt  Lexer.cxx  Main.cxx  Parser.cxx  SyntaxKind.cxx  TokenKind.cxx  Visitor.cxx
compiler/weave_syntax/tests/data/: Numbers.error  Numbers.output  Strings.error  Strings.output  Strings.source  Tokens.error  Tokens.output  Trivia.error  Trivia.output  Trivia.source
compiler/weave_system/: CMakeLists.txt
compiler/weave_system/cxx/: CMakeLists.txt
compiler/weave_system/cxx/posix/: CMakeLists.txt  Environment.cxx  Process.cxx
compiler/weave_threading/: CMakeLists.txt
compiler/weave_threading/cxx/: CMakeLists.txt  Runnable.cxx  Task.cxx
compiler/weave_time/: CMakeLists.txt
compiler/weave_time/cxx/: CMakeLists.txt  DateTime.cxx  DateTimeOffset.cxx  Duration.cxx  Instant.cxx
compiler/weave_time/tests/: CMakeLists.txt  DateTime.cxx  Duration.cxx
compiler/weave_tokenizer/: CMakeLists.txt
compiler/weave_tokenizer/cxx/: CMakeLists.txt  CharTraits.cxx  Token.cxx  TokenKind.cxx  Tokenizer.cxx  TokenizerContext.cxx  TriviaKind.cxx
compiler/weave_unicode/: CMakeLists.txt
compiler/weave_unicode/cxx/: CMakeLists.txt  Unicode.cxx
compiler/weave_unicode/generate/: generate.py  info.txt
compiler/weave_unicode/tests/: CMakeLists.txt  Encoding.cxx
compiler/weave_uuid/: CMakeLists.txt
compiler/weave_uuid/cxx/: CMakeLists.txt  Uuid.cxx
compiler/weave_uuid/tests/: CMakeLists.txt  Uuid.cxx
src/Compiler/Core/: CMakeLists.txt
src/Compiler/Syntax/: CMakeLists.txt
tools/weave_compiletest/: CMakeLists.txt
tools/weave_compiletest/cxx/: CMakeLists.txt  Main.cxx
tools/weave_compiletest/docs/: Reference.md
(+550 files in other folders)
