add_subdirectory(weave_bitwise)
add_subdirectory(weave_bugcheck)
add_subdirectory(weave_commandline)
add_subdirectory(weave_core)
add_subdirectory(weave_driver)
add_subdirectory(weave_errors)
add_subdirectory(weave_filesystem)
add_subdirectory(weave_hash)
add_subdirectory(weave_json)
add_subdirectory(weave_memory)
add_subdirectory(weave_numerics)
add_subdirectory(weave_platform)
add_subdirectory(weave_profiler)
add_subdirectory(weave_session)
add_subdirectory(weave_source)
add_subdirectory(weave_stringpool)
add_subdirectory(weave_syntax)
add_subdirectory(weave_system)
add_subdirectory(weave_time)
add_subdirectory(weave_tokenizer)
add_subdirectory(weave_threading)
add_subdirectory(weave_unicode)
add_subdirectory(weave_uuid)
