add_executable(weave_driver)

target_link_libraries(weave_driver PUBLIC weave_hash)
target_link_libraries(weave_driver PUBLIC weave_bugcheck)
target_link_libraries(weave_driver PUBLIC weave_commandline)
target_link_libraries(weave_driver PUBLIC weave_memory)
target_link_libraries(weave_driver PUBLIC weave_unicode)
target_link_libraries(weave_driver PUBLIC weave_source)
target_link_libraries(weave_driver PUBLIC weave_system)
target_link_libraries(weave_driver PUBLIC weave_session)
target_link_libraries(weave_driver PUBLIC weave_filesystem)
target_link_libraries(weave_driver PUBLIC weave_syntax)
target_link_libraries(weave_driver PUBLIC weave_time)
target_link_libraries(weave_driver PUBLIC weave_profiler)
target_link_libraries(weave_driver PUBLIC weave_uuid)
target_link_libraries(weave_driver PUBLIC weave_threading)

target_include_directories(weave_driver PUBLIC include)

set_target_properties(weave_driver PROPERTIES OUTPUT_NAME "weave-driver")

WEAVE_CXX_FORTIFY_CODE(weave_driver)

add_subdirectory(cxx)
