add_library(weave_filesystem STATIC)

target_include_directories(weave_filesystem PUBLIC include)

target_link_libraries(weave_filesystem PUBLIC weave_bugcheck)
target_link_libraries(weave_filesystem PUBLIC weave_platform)
target_link_libraries(weave_filesystem PUBLIC weave_time)

WEAVE_CXX_FORTIFY_CODE(weave_filesystem)

add_subdirectory(cxx)
add_subdirectory(tests)
